--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="user_rating">User Rating</string>
     <string name="release_date">Release Date</string>
     <string name="plot_synopsis">Plot Synopsis</string>
+    <string name="action_sort_by_most_popular">Sort by Most Popular</string>
+    <string name="action_sort_by_high_rating">Sort by High Rating</string>
 </resources>
